Change semantics of jobs from script paths to commands
