# api/openapi.yaml
@@ -115,7 +115,7 @@ components:
         crontabString:
           type: string
           example: 15 16 1 */3 *
-        scriptPath:
+        command:
           type: string
           example: /home/user/me/check.sh
         timeout:
@@ -127,7 +127,7 @@ components:
         - id
         - name
         - crontabString
-        - scriptPath
+        - command
         - timeout
 
     RequestJob:
@@ -139,7 +139,7 @@ components:
         crontabString:
           type: string
           example: 15 16 1 */3 *
-        scriptPath:
+        command:
           type: string
           example: /home/user/me/check.sh
         timeout:
@@ -150,7 +150,7 @@ components:
       required:
         - name
         - crontabString
-        - scriptPath
+        - command
         - timeout
 
     ResponseId:
@@ -179,7 +179,7 @@ components:
         crontabString:
           type: string
           example: ill-formed crontab string
-        scriptPath:
+        command:
           type: string
           example: file null.sh doesn't exist
         timeout:
